# ParserBavarianFishingExam2025

./: .gitignore  README.md  fishing_exam_parser.py  generate_anki_deck.py  pyproject.toml
