# Project metadata (PEP 621) - required for uv
[project]
name = "bayrische-fischereipruefung-parser"
version = "1.0.0"
description = "Parser for Bavarian fishing exam questions with Anki deck generation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.10.0",
    "click>=8.1.7",
    "pydantic>=2.10.6",
    "pillow>=11.0.0",
    "genanki>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
parse-exam = "fishing_exam_parser:main"
generate-anki = "generate_anki_deck:main"

# Poetry-specific configuration (optional, for Poetry users)
[tool.poetry]
name = "bayrische-fischereipruefung-parser"
version = "1.0.0"
description = "Parser for Bavarian fishing exam questions with Anki deck generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "^0.10.0"
click = "^8.1.7"
pydantic = "^2.10.6"
pillow = "^11.0.0"
genanki = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
